{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 17,
  "lineage": "6b92b274-cf5b-6a9b-fab9-5d7d1424ab5b",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-0017ca7f9b1c172af",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:190864883972:subnet/subnet-0017ca7f9b1c172af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.48.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0017ca7f9b1c172af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "190864883972",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-08e82f62e6e1d76cd"
          }
        },
        {
          "index_key": "subnet-00260c854c20fda34",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:190864883972:subnet/subnet-00260c854c20fda34",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "available_ip_address_count": 4090,
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00260c854c20fda34",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "190864883972",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-08e82f62e6e1d76cd"
          }
        },
        {
          "index_key": "subnet-00b1beb0bc31f1b2f",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:190864883972:subnet/subnet-00b1beb0bc31f1b2f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "available_ip_address_count": 4090,
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b1beb0bc31f1b2f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "190864883972",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-08e82f62e6e1d76cd"
          }
        },
        {
          "index_key": "subnet-0a78dfe0509d9d731",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:190864883972:subnet/subnet-0a78dfe0509d9d731",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a78dfe0509d9d731",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "190864883972",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-08e82f62e6e1d76cd"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:190864883972:vpc/vpc-08e82f62e6e1d76cd",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0530a89f7a685077d",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-05b0a738e8eeb8da9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": true,
            "id": "vpc-08e82f62e6e1d76cd",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0841519999522fca1",
            "owner_id": "190864883972",
            "tags": {
              "Name": "Default VPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.rds_proxy_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:190864883972:security-group/sg-03a9d3a326ee2fbde",
            "description": "PostgreSQL RDS Proxy example security group",
            "egress": [],
            "id": "sg-03a9d3a326ee2fbde",
            "ingress": [],
            "name": "rds_proxy-20230823183729416200000001",
            "name_prefix": "rds_proxy-",
            "owner_id": "190864883972",
            "revoke_rules_on_delete": true,
            "tags": {
              "Example": "rds-proxy-ex-postgres",
              "Name": "rds-proxy-ex-postgres",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds-proxy"
            },
            "tags_all": {
              "Example": "rds-proxy-ex-postgres",
              "Name": "rds-proxy-ex-postgres",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds-proxy"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-08e82f62e6e1d76cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.rds_proxy_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.31.48.0/20",
              "172.31.16.0/20",
              "172.31.32.0/20",
              "172.31.0.0/20"
            ],
            "description": "Database subnet PostgreSQL access",
            "from_port": 5432,
            "id": "sgrule-1417093630",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03a9d3a326ee2fbde",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5432,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnet.selected",
            "data.aws_subnets.private",
            "data.aws_vpc.selected",
            "module.rds_proxy_sg.aws_security_group.this",
            "module.rds_proxy_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.rds_proxy_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.31.48.0/20",
              "172.31.16.0/20",
              "172.31.32.0/20",
              "172.31.0.0/20"
            ],
            "description": "Private subnet PostgreSQL access",
            "from_port": 5432,
            "id": "sgrule-3812967752",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03a9d3a326ee2fbde",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnet.selected",
            "data.aws_subnets.private",
            "data.aws_vpc.selected",
            "module.rds_proxy_sg.aws_security_group.this",
            "module.rds_proxy_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}